--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -317,4 +317,33 @@ jobs:
 #          - script: ./etc/release/scancode-test-pip-install-editable.sh
 #            displayName: 'Test pip editable installation'
 
+################################################################################
+# Tests using a plain pip install to get the latest of all wheels
+################################################################################
+
+
+    - template: etc/ci/azure-posix.yml
+      parameters:
+          job_name: ubuntu20_cpython_latest_from_pip
+          image_name: ubuntu-20.04
+          python_versions: ['3.6', '3.7', '3.8', '3.9']
+          test_suites:
+              all: tmp/bin/pip install --force-reinstall --upgrade -e .[dev] && tmp/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+
+    - template: etc/ci/azure-win.yml
+      parameters:
+          job_name: win2019_cpython_latest_from_pip
+          image_name: windows-2019
+          python_versions: ['3.6', '3.7', '3.8', '3.9']
+          test_suites:
+              all: tmp\Scripts\pip install --force-reinstall --upgrade -e .[dev] &&  tmp\Scripts\pytest -n 2 -vvs  tests\scancode\test_cli.py
+
+    - template: etc/ci/azure-posix.yml
+      parameters:
+          job_name: macos1015_cpython_latest_from_pip
+          image_name: macos-10.15
+          python_versions: ['3.6', '3.7', '3.8', '3.9']
+          test_suites:
+              all: tmp/bin/pip install --force-reinstall --upgrade -e .[dev] && tmp/bin/pytest -n 2 -vvs  tests/scancode/test_cli.py
+
 
