Align test resulst with latest libraries updates
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
@@ -1,4 +1,5 @@
 - |
+  GPL-2
   GPL-2 with OpenSSL exception
   GPL-2+
   GPL-2+ with Autoconf exception
@@ -24,18 +25,23 @@
   LZW
   public-domain
   Apache-2.0 with GPL exception
+  GPL-3+ with Bison exception
 - apache-2.0 AND autoconf-simple-exception AND autoconf-simple-exception-2.0 AND bison-exception-2.2
   AND bsd-new AND bsd-simplified AND bzip2-libbzip-2010 AND fsf-ap AND fsf-free AND fsf-unlimited
-  AND fsf-unlimited-no-warranty AND gpl-1.0-plus AND gpl-2.0 AND gpl-2.0-plus AND gpl-3.0 AND
-  gpl-3.0-plus AND gpl-3.0-plus WITH libtool-exception-2.0 AND isc AND lgpl-2.0-plus AND lgpl-2.1
-  AND lgpl-2.1-plus AND libtool-exception-2.0 AND mit AND openssl-exception-gpl-3.0-plus AND
-  other-copyleft AND public-domain AND unknown AND x11-tiff AND zlib
+  AND fsf-unlimited-no-warranty AND gpl-1.0-plus AND gpl-2.0 AND gpl-2.0-plus AND gpl-3.0-plus
+  AND gpl-3.0-plus WITH libtool-exception-2.0 AND isc AND lgpl-2.0-plus AND lgpl-2.1 AND lgpl-2.1-plus
+  AND libtool-exception-2.0 AND mit AND openssl-exception-gpl-3.0-plus AND public-domain AND
+  unknown AND x11-tiff AND zlib
 - |
+  1998-2015, Sourcefire, Inc.
+  2002-2007, Tomasz Kojm <tkojm@clamav.net>
+  2006, Sensory Networks, Inc
+  2007-2015, Cisco Systems, Inc
+  2014-2018, Cisco and/or its affiliates
   2014, 2017-2018 Cisco and/or its affiliates
   2002-2013, Tomasz Kojm <tkojm@clamav.net>
   2004 Trog <trog@uncon.org>
   2006, Everton da Silva Marques <everton.marques@gmail.com>
-  2006, Sensory Networks, Inc
   2007-2013, Sourcefire, Inc.
   2014, Cisco Systems, Inc.
   2004, Stephen Gran <sgran@debian.org>
@@ -75,3 +81,4 @@
   Public Domain
   Copyright (C) 2014 Cisco Systems, Inc. and/or its affiliates. All rights reserved.
   Copyright (c) 2013. The YARA Authors. All Rights Reserved.
+  1984, 1989-1990, 2000-2011, Free Software Foundation, Inc.
