--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/f/fusiondirectory/stable_copyright-detailed.expected.yml
@@ -57,6 +57,7 @@
   2006, Steve Moitozo <god at zilla dot us>
   1998, Eric Kilfoil <eric@ipass.net>
   2003, Alejandro Escanero Blanco <aescanero@chaosdimension.org>
+  2009-2010, Bas Tichelaar
   2005, Benoit Mortier
   2005, Guillame Delecourt
   2006, Benoit Mortier
