--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pulseaudio/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pulseaudio/stable_copyright-detailed.expected.yml
@@ -43,4 +43,5 @@
   Copyright 2006-2008 CJ van den Berg <cj@vdbonline.com>
   Copyright 2004-2006 Lennart Poettering
   Copyright 2009 Wim Taymans <wim.taymans@collabora.co.uk>
+  Copyright 2009 Ted Percival
   2009 Jason Newton <nevion@gmail.com>
