--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/apache2/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/apache2/stable_copyright-detailed.expected.yml
@@ -12,12 +12,16 @@
   Apache-2.0 or GPL-2+
   Expat
   Zeus
+  MD5
+  GPL-3+
   GPL-2+
   Haines
+  Cisco
+  BSD-3-clause-Cambridge
   Custom
 - apache-2.0 AND bison-exception-2.2 AND bsd-new AND bsd-simplified AND bsd-simplified-darwin
-  AND gpl-2.0 AND gpl-2.0-plus AND gpl-3.0 AND gpl-3.0-plus AND historical AND hs-regexp AND
-  mit AND unknown AND x11-keith-packard AND zeusbench
+  AND bsd-unchanged AND gpl-2.0 AND gpl-2.0-plus AND gpl-3.0 AND gpl-3.0-plus AND historical
+  AND hs-regexp AND mit AND unknown AND x11-keith-packard AND zeusbench
 - |
   Copyright 2019 The Apache Software Foundation
   2019 The Apache Software Foundation
