--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/m/mariadb-10.3/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/m/mariadb-10.3/stable_copyright-detailed.expected.yml
@@ -153,6 +153,9 @@
   1995-2009 Innobase Oy.
   1984,1989-1990,2000-2004 Free Software Foundation Inc.
   1984, 1989-1990, 2000-2006 Free Software Foundation, Inc.
+  2000 MySQL AB
+  1998 Theppitak Karoonboonyanan
+  1998-1999 Pruet Boonma
   Richard A. O'Keefe.
   1998 Abandoned Irena Pancirov - Irnet Snc
   1987 Abandoned Fred Fish
