--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/perl/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/perl/copyright-detailed.expected.yml
@@ -143,6 +143,10 @@
   Copyright (C) 2004, 2008 Matthijs van Duin. All rights reserved.
   Copyright (C) 2014 cPanel Inc. All rights reserved.
   (c) 2014 Paul Evans <leonerd@leonerd.org.uk>. All rights reserved
+  Copyright (C) 1997-2001 Canon Research Centre Europe (CRE).
+  Copyright (C) 2001-2010 Neil Bowers
+  Copyright (c) 1996-2018 Sullivan Beck
+  Copyright (c) 2001 Michael Hennecke
   Copyright 2003, 2004, 2005, 2006 by Audrey Tang <cpan@audreyt.org>
   Copyright (C) All Perl Hackers everywhere
   Ton Voon <ton.voon@opsera.com>, 2009.
