--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ click==6.7
 colorama==0.4.4
 commoncode==21.5.25
 debian-inspector==21.5.25
-dparse2==0.5.0.4
+dparse==0.5.1
 extractcode==21.2.24
 extractcode-7z==16.5.210223
 extractcode-libarchive==3.5.1.210223
@@ -34,7 +34,7 @@ MarkupSafe==1.1.1
 more-itertools==5.0.0
 nltk==3.2
 normality==2.1.1
-packageurl-python==0.9.0
+packageurl-python==0.9.4
 packaging==20.4
 patch==1.16
 pdfminer.six==20181108
