--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -61,22 +61,24 @@ install_requires =
     colorama >= 0.3.9
     commoncode >= 21.5.25
     debian-inspector >= 21.5.25
-    dparse2
+    dparse >= 0.5.1
     fasteners
     fingerprints >= 0.6.0
     ftfy <  5.0.0
     gemfileparser >= 0.7.0
     html5lib
+    importlib_metadata; python_version < "3.9"
     intbitset >= 2.3.0,  < 3.0
     jaraco.functools
     javaproperties >= 0.5
-    jinja2 >= 2.7.0, < 3.0.0
+    jinja2 >= 2.7.0, < 4.0.0
     jsonstreams >= 0.5.0
     license_expression >= 0.99
-    lxml >= 4.0.0, < 5.0.0
+    lxml >= 4.6.3, < 5.0.0
     MarkupSafe >= 0.23
     nltk >= 3.2, !=3.6, < 4.0
     packageurl_python >= 0.7.0
+    packaging
     pdfminer.six >= 20170720
     pefile >= 2018.8.8
     pkginfo >= 1.5.0.1
@@ -95,6 +97,7 @@ install_requires =
     typing >=3.6, < 3.7; python_version < "3.7"
     urlpy
     xmltodict >= 0.11.0
+    zipp >= 3.0.0; python_version < "3.9"
     typecode >= 21.2.24
 
 
