--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libnsl2/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libnsl2/copyright-detailed.expected.yml
@@ -12,6 +12,7 @@
   - GPL-2+-libtool-exception
   - permissive-autoconf-m4
   - permissive-fsf
+  - BSD-3-clause
   - GPL-2+-autoconf-exception
   - GPL-2+-libtool-exception
   - GPL-3+-autoconf-exception
@@ -25,11 +26,10 @@
   - permissive-makefile-in
 - (lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.1 AND lgpl-2.1) AND (lgpl-2.1 AND lgpl-3.0-plus
   AND gpl-1.0-plus AND lgpl-2.1) AND (lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.1 AND lgpl-2.1)
-  AND bsd-3-clause AND fsf-ap AND fsf-unlimited-no-warranty AND fsf-unlimited-no-warranty AND
-  (gpl-3.0-plus WITH autoconf-simple-exception AND gpl-3.0) AND fsf-free AND (gpl-2.0-plus WITH
-  autoconf-simple-exception-2.0 AND gpl-2.0 AND gpl-2.0) AND x11-xconsortium AND (gpl-2.0-plus
-  WITH libtool-exception-2.0 AND gpl-2.0 AND gpl-2.0) AND fsf-unlimited AND fsf-ap AND (bsd-new
-  AND bsd-new)
+  AND bsd-new AND fsf-ap AND fsf-unlimited-no-warranty AND fsf-unlimited-no-warranty AND (gpl-3.0-plus
+  WITH autoconf-simple-exception AND gpl-3.0) AND fsf-free AND (gpl-2.0-plus WITH autoconf-simple-exception-2.0
+  AND gpl-2.0 AND gpl-2.0) AND x11-xconsortium AND (gpl-2.0-plus WITH libtool-exception-2.0
+  AND gpl-2.0 AND gpl-2.0) AND fsf-unlimited AND fsf-ap
 - |
   2020, Aurelien Jarno
   2014, 2015, 2017-2018, Thorsten Kukuk
