--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/apache2/stable_copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/apache2/stable_copyright.expected.yml
@@ -11,19 +11,20 @@
   - Apache-2.0 or GPL-2+
   - Expat
   - Zeus
+  - MD5
+  - GPL-3+
   - GPL-2+
   - Haines
+  - Cisco
+  - BSD-3-clause-Cambridge
   - Custom
 - (apache-2.0 AND apache-2.0 AND apache-2.0) AND ((apache-2.0 AND apache-2.0 AND apache-2.0)
-  AND bsd-3-clause-cambridge) AND bsd-new AND (gpl-3.0-plus OR bison-exception-2.2) AND bsd-3-clause-smrgrav
-  AND ((apache-2.0 AND apache-2.0 AND apache-2.0) AND cisco) AND bsd-2-clause-darwin AND ((apache-2.0
-  AND apache-2.0 AND apache-2.0) AND unknown-license-reference) AND ((apache-2.0 AND apache-2.0
-  AND apache-2.0) AND md5) AND ((apache-2.0 AND apache-2.0 AND apache-2.0) AND zeusbench) AND
-  ((apache-2.0 AND apache-2.0 AND apache-2.0) OR (gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0
-  AND gpl-2.0)) AND mit AND (unknown-license-reference AND x11-keith-packard AND historical
-  AND gpl-3.0-plus AND gpl-3.0-plus AND gpl-2.0 AND gpl-3.0) AND (bsd-simplified AND bsd-simplified-darwin
-  AND unknown-license-reference AND apache-2.0 AND hs-regexp AND bsd-new AND bsd-unchanged AND
-  bsd-new AND bsd-new)
+  AND bsd-new) AND bsd-new AND ((gpl-3.0-plus AND gpl-3.0-plus AND gpl-2.0 AND gpl-3.0) OR bison-exception-2.2)
+  AND bsd-unchanged AND ((apache-2.0 AND apache-2.0 AND apache-2.0) AND (apache-2.0 AND hs-regexp))
+  AND bsd-simplified-darwin AND ((apache-2.0 AND apache-2.0 AND apache-2.0) AND unknown-license-reference)
+  AND ((apache-2.0 AND apache-2.0 AND apache-2.0) AND (x11-keith-packard AND historical)) AND
+  ((apache-2.0 AND apache-2.0 AND apache-2.0) AND zeusbench) AND ((apache-2.0 AND apache-2.0
+  AND apache-2.0) OR (gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0 AND gpl-2.0)) AND mit
 - |
   Copyright 2019 The Apache Software Foundation
   2019 The Apache Software Foundation
