--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/gnupg2/stable_copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/gnupg2/stable_copyright.expected.yml
@@ -8,11 +8,11 @@
   - TinySCHEME
   - CC0-1.0
   - BSD-3-clause
-- gpl-3.0-plus AND permissive AND (lgpl-2.1-plus AND lgpl-3.0-plus) AND mit AND (gpl-3.0-plus
-  OR bsd-new) AND (lgpl-3.0-plus AND lgpl-3.0-plus AND lgpl-3.0 AND lgpl-3.0) AND (unknown-license-reference
+- (gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0)
+  AND fsf-unlimited-no-warranty AND (lgpl-2.1-plus AND lgpl-3.0-plus) AND mit AND ((gpl-3.0-plus
+  AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0) OR bsd-new) AND
+  (lgpl-3.0-plus AND lgpl-3.0-plus AND lgpl-3.0 AND lgpl-3.0) AND (unknown-license-reference
   AND unknown-license-reference AND ietf) AND bsd-new AND (cc0-1.0 AND cc0-1.0 AND artistic-2.0)
-  AND (other-permissive AND fsf-unlimited-no-warranty) AND (gpl-3.0-plus AND gpl-3.0-plus AND
-  gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0)
 - |
   1992, 1995-2016, Free Software Foundation, Inc
   1998-2007, 2009, 2012, Free Software Foundation, Inc
