--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pam-u2f/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/pam-u2f/stable_copyright-detailed.expected.yml
@@ -5,12 +5,13 @@
   - FSFUL
   - GPL-3+
   - GPL-2+ with libtool exception
+  - GPL-2+
   - GPL-3+
   - BSD-2-clause
-- bsd-simplified AND bsd-simplified AND gpl-2.0-plus AND gpl-2.0-plus AND fsf-unlimited AND
-  (gpl-3.0-plus AND gpl-3.0-plus AND gpl-3.0 AND gpl-3.0) AND (gpl-2.0-plus AND gpl-2.0-plus
-  AND libtool-exception-2.0 AND gpl-2.0-plus AND gpl-2.0) AND (gpl-2.0-plus AND gpl-2.0 AND
-  gpl-2.0)
+- bsd-simplified AND bsd-simplified AND (gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0 AND gpl-2.0)
+  AND (gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0 AND gpl-2.0) AND fsf-unlimited AND (gpl-3.0-plus
+  AND gpl-3.0-plus AND gpl-3.0 AND gpl-3.0) AND (gpl-2.0-plus AND gpl-2.0-plus AND libtool-exception-2.0
+  AND gpl-2.0-plus AND gpl-2.0)
 - |
   Copyright (c) 2006-2018 Yubico AB
   2014-2016 Yubico AB
