--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/perl/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/perl/copyright.expected.yml
@@ -45,8 +45,7 @@
   AND gpl-1.0) OR (artistic-2.0 AND artistic-perl-1.0) OR (artistic-dist-1.0 AND unknown-license-reference))
   AND (artistic-dist-1.0 AND unknown-license-reference) AND ((artistic-2.0 AND artistic-perl-1.0)
   OR (gpl-1.0-plus AND gpl-1.0) OR (artistic-dist-1.0 AND unknown-license-reference)) AND (((gpl-1.0-plus
-  AND gpl-1.0) OR (artistic-2.0 AND artistic-perl-1.0)) AND mit) AND ((gpl-1.0-plus OR artistic-perl-1.0)
-  AND (artistic-perl-1.0 OR gpl-1.0-plus))
+  AND gpl-1.0) OR (artistic-2.0 AND artistic-perl-1.0)) AND mit)
 - |
   Perl is Copyright (C) 1987-2018 by Larry Wall and others. All rights reserved.
   Copyright (c) 1996-2006, Nick Ing-Simmons
@@ -152,6 +151,10 @@
   Copyright (C) 2004, 2008 Matthijs van Duin. All rights reserved.
   Copyright (C) 2014 cPanel Inc. All rights reserved.
   (c) 2014 Paul Evans <leonerd@leonerd.org.uk>. All rights reserved
+  Copyright (C) 1997-2001 Canon Research Centre Europe (CRE).
+  Copyright (C) 2001-2010 Neil Bowers
+  Copyright (c) 1996-2018 Sullivan Beck
+  Copyright (c) 2001 Michael Hennecke
   Copyright 2003, 2004, 2005, 2006 by Audrey Tang <cpan@audreyt.org>
   Copyright (C) All Perl Hackers everywhere
   Ton Voon <ton.voon@opsera.com>, 2009.
