--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gpgv/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gpgv/copyright-detailed.expected.yml
@@ -13,18 +13,24 @@
   - GPL-3+
   - CC0-1.0
   - TinySCHEME
+  - permissive
   - RFC-Reference
+  - GPL-3+
   - LGPL-3+
   - LGPL-2.1+
   - BSD-3-clause
   - Expat
   - CC0-1.0
-- gpl-3.0-plus AND gpl-3.0-plus AND permissive AND permissive AND (lgpl-2.1-plus AND lgpl-3.0-plus)
-  AND mit AND gpl-3.0-plus AND (gpl-3.0-plus OR bsd-new) AND (lgpl-3.0-plus AND lgpl-3.0-plus
-  AND lgpl-3.0 AND lgpl-3.0) AND gpl-3.0-plus AND (unknown-license-reference AND unknown-license-reference
-  AND ietf) AND bsd-new AND gpl-3.0-plus AND (cc0-1.0 AND cc0-1.0 AND artistic-2.0) AND (other-permissive
-  AND fsf-unlimited-no-warranty) AND (gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus
-  AND gpl-3.0 AND gpl-3.0)
+- (gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0)
+  AND (gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0)
+  AND fsf-unlimited-no-warranty AND fsf-unlimited-no-warranty AND (lgpl-2.1-plus AND lgpl-3.0-plus)
+  AND mit AND (gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND
+  gpl-3.0) AND ((gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0
+  AND gpl-3.0) OR bsd-new) AND (lgpl-3.0-plus AND lgpl-3.0-plus AND lgpl-3.0 AND lgpl-3.0) AND
+  (gpl-3.0-plus AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0)
+  AND (unknown-license-reference AND unknown-license-reference AND ietf) AND bsd-new AND (gpl-3.0-plus
+  AND gpl-3.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-3.0 AND gpl-3.0) AND (cc0-1.0 AND
+  cc0-1.0 AND artistic-2.0)
 - |
   1992, 1995-2020, Free Software Foundation, Inc
   1998-2007, 2009, 2012, Free Software Foundation, Inc
