--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/liblz4-1/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/liblz4-1/copyright.expected.yml
@@ -2,7 +2,7 @@
   - GPL-2+
   - GPL-2
 - bsd-simplified AND (gpl-2.0-plus AND gpl-2.0 AND gpl-2.0 AND gpl-2.0) AND (gpl-2.0 AND gpl-2.0
-  AND gpl-2.0 AND gpl-2.0) AND gpl-2.0-plus
+  AND gpl-2.0 AND gpl-2.0)
 - |
   Copyright (C) 2011-2017, Yann Collet.
   Copyright (C) 2011-2014, Yann Collet.
