--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright.expected.yml
@@ -1,10 +1,9 @@
 - - BSD-3-Clause
   - permissive-like-automake-output
   - ISC
+  - ISC+IBM
   - same-as-rest-of-p11kit
-- bsd-3-clause AND fsf-unlimited-no-warranty AND isc AND free-unknown AND (bsd-new AND mit)
-  AND (unknown-license-reference AND isc AND ibm-dhcp) AND bsd-new AND (bsd-new AND unknown-license-reference
-  AND bsd-new) AND (bsd-new AND bsd-new)
+- bsd-new AND fsf-unlimited-no-warranty AND isc AND (isc AND ibm-dhcp) AND free-unknown
 - |
   2011 Collabora Ltd.
   2004, 2005, 2007, 2008, 2012, 2013 Stefan Walter
@@ -14,17 +13,22 @@
   2006 Andreas Jellinghaus
   Copyright 2017 Red Hat, Inc.
   2020 Amazon.com, Inc. or its affiliates.
+  2014 Red Hat Inc.
   2004, 2005, 2007, 2011 Internet Systems Consortium, Inc. ("ISC")
   2000, 2001, 2003 Internet Software Consortium.
+  1996, 1998 by Internet Software Consortium
+  Portions Copyright (c) 1995 by International Business Machines, Inc.
   Copyright (c) 2011 Collabora Ltd.
   Portions of this file are covered by the following copyright:
   Copyright (c) 2001 Mike Barcroft <mike@FreeBSD.org>
   Copyright (c) 1990, 1993
   Copyright (c) 1987, 1993
   The Regents of the University of California.
+  2013 Nikos Mavrogiannopoulos
   2020 Red Hat Inc.
   2012 Stefan Walter
   2020 Red Hat, Inc.
+  2011 Chris Leick
   2012 Rosetta Contributors and Canonical Ltd 2012
   Eerik Uusi-Illikainen https://launchpad.net/~ekiuusi-4, 2012
   Timo Jyrinki <timo.jyrinki@iki.fi>, 2012
