Added output formats --ccsv and --doc

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -192,6 +192,8 @@ scancode_output =
     spdx-tv = formattedcode.output_spdx:SpdxTvOutput
     spdx-rdf = formattedcode.output_spdx:SpdxRdfOutput
     csv = formattedcode.output_csv:CsvOutput
+    ccsv = formattedcode.output_ccsv:CcsvOutput
+    doc = formattedcode.output_doc:DocOutput
     jsonlines = formattedcode.output_jsonlines:JsonLinesOutput
     template = formattedcode.output_html:CustomTemplateOutput
     debian = formattedcode.output_debian:DebianCopyrightOutput
