--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -54,7 +54,7 @@ python_requires = >=3.6.*, <4
 install_requires =
     attrs >= 18.1, !=20.1.0
     Beautifulsoup4 >= 4.0.0, <5.0.0
-    bitarray >= 0.8.1, < 1.0.0
+    bitarray >= 0.8.1, < 3.0.0
     boolean.py >= 3.5,  < 4.0
     chardet >= 3.0.0
     click >= 6.7, !=7.0
@@ -64,7 +64,7 @@ install_requires =
     dparse >= 0.5.1
     fasteners
     fingerprints >= 0.6.0
-    ftfy <  5.0.0
+    ftfy >=  4.0.0
     gemfileparser >= 0.7.0
     html5lib
     importlib_metadata; python_version < "3.9"
@@ -78,7 +78,7 @@ install_requires =
     MarkupSafe >= 1.0
     nltk >= 3.2, !=3.6, < 4.0
     packageurl_python >= 0.9.0
-    packaging
+    packaging > 20
     pdfminer.six >= 20200101
     pefile >= 2020.1.1
     pkginfo >= 1.7.0
@@ -86,7 +86,6 @@ install_requires =
     plugincode >= 21.1.21
     publicsuffix2
     pyahocorasick >= 1.4.0, < 1.5
-    pycryptodome >= 3.6.6
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0, < 3.0.0
@@ -121,7 +120,6 @@ dev =
     pytest-rerunfailures
     aboutcode-toolkit >= 6.0.0
     bump2version
-    coverage
 
 [options.entry_points]
 console_scripts =
