--- a/tests/cluecode/data/ics/libvpx-examples-includes-PHP-Markdown-Extra-1.2.3/markdown.php.yml
+++ b/tests/cluecode/data/ics/libvpx-examples-includes-PHP-Markdown-Extra-1.2.3/markdown.php.yml
@@ -18,3 +18,5 @@ holders_summary:
   - value: Michel Fortin
     count: 2
 notes: we do not want a trailing http
+expected_failures:
+  - copyrights
