Add new is_generic flag
Signed-off-by: akugarg <akanksha.garg2k@gmail.com>

--- a/src/licensedcode/data/rules/generic-cla7.yml
+++ b/src/licensedcode/data/rules/generic-cla7.yml
@@ -2,3 +2,4 @@ license_expression: generic-cla
 is_license_notice: yes
 ignorable_urls:
     - http://fedoraproject.org/wiki/Legal/Licenses/CLA
+is_generic: yes
