--- a/src/licensedcode/data/rules/generic-cla_or_hdf5_1.yml
+++ b/src/licensedcode/data/rules/generic-cla_or_hdf5_1.yml
@@ -1,4 +1,5 @@
 license_expression: generic-cla OR hdf5
 is_license_notice: yes
+is_generic: yes
 relevance: 80
 notes: this is essentially the CLA section of the hdf5 license
