--- a/src/licensedcode/data/rules/generic-cla2.yml
+++ b/src/licensedcode/data/rules/generic-cla2.yml
@@ -1,5 +1,6 @@
 license_expression: generic-cla
 is_license_notice: yes
+is_generic: yes
 notes: Oracle CLA for OpenOffice
 ignorable_emails:
     - Copyrightfax@sun.com
