--- a/src/licensedcode/data/rules/generic-cla_5.yml
+++ b/src/licensedcode/data/rules/generic-cla_5.yml
@@ -1,5 +1,6 @@
 license_expression: generic-cla
 is_license_notice: yes
+is_generic: yes
 relevance: 100
 ignorable_urls:
     - http://opensource.org/licenses
