--- a/src/licensedcode/data/rules/generic-cla_9.yml
+++ b/src/licensedcode/data/rules/generic-cla_9.yml
@@ -1,4 +1,5 @@
 license_expression: generic-cla
 is_license_text: yes
+is_generic: yes
 relevance: 100
 notes: https://github.com/BVLC/caffe/blob/master/LICENSE
