--- a/src/licensedcode/data/rules/generic-exception_9.yml
+++ b/src/licensedcode/data/rules/generic-exception_9.yml
@@ -1,5 +1,6 @@
 license_expression: generic-exception
 is_license_notice: yes
+is_generic: yes
 relevance: 100
 minimum_coverage: 98
 notes: This is an exception found in Tahoe-LAFS with the TGPPL or the GPL
