--- a/src/licensedcode/data/rules/generic-tos_1.yml
+++ b/src/licensedcode/data/rules/generic-tos_1.yml
@@ -1,5 +1,6 @@
 license_expression: generic-tos
 is_license_text: yes
+is_generic: yes
 relevance: 100
 ignorable_urls:
     - http://www.google.com/privacy.html
