Modify tests for unstructured debian copyrights
Uses filter_licenses flag to return all license matches and not
only unique ones in the case of unstructured copyright files tests,
which have with_details as True.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/b/backup-manager/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/b/backup-manager/stable_copyright-detailed.expected.yml
@@ -1,5 +1,5 @@
 -
-- gpl-2.0-plus AND gpl-2.0
+- gpl-2.0-plus AND gpl-2.0 AND gpl-2.0
 - |
   Copyright 2003-2010 Alexis Sukrieh
   Copyright 2005 Alexis Sukrieh Debianization
