--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/n/ncurses/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/n/ncurses/stable_copyright-detailed.expected.yml
@@ -1,5 +1,5 @@
 -
-- x11-fsf AND x11-xconsortium AND bsd-new
+- x11-fsf AND x11-xconsortium AND bsd-new AND x11-fsf
 - |
   Copyright (c) 1998-2018 Free Software Foundation, Inc.
   Copyright (c) 2001 by Pradeep Padala
