--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcap-ng0/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libcap-ng0/copyright-detailed.expected.yml
@@ -1,5 +1,5 @@
 -
-- lgpl-2.0-plus AND gpl-2.0-plus AND gpl-3.0
+- lgpl-2.0-plus AND gpl-2.0-plus AND gpl-3.0 AND gpl-3.0
 - |
   Copyright 2009 Red Hat Inc.
   Copyright (c) 2009 Pierre Chifflier <pollux@debian.org>
