--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/appstream/appstream_0.12.5-1_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/appstream/appstream_0.12.5-1_copyright-detailed.expected.yml
@@ -1,5 +1,8 @@
 -
-- gpl-2.0-plus AND lgpl-2.0-plus AND lgpl-2.1-plus AND (gpl-2.0-plus AND gpl-3.0) AND lgpl-3.0-plus
+- gpl-2.0-plus AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.1-plus AND gpl-2.0-plus
+  AND gpl-2.0-plus AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.1-plus AND
+  lgpl-2.1-plus AND lgpl-2.1-plus AND (gpl-2.0-plus AND gpl-3.0) AND lgpl-2.1-plus AND gpl-2.0-plus
+  AND lgpl-3.0-plus
 - |
   Copyright 2012-2018, Matthias Klumpp <matthias@tenstral.net> Richard Hughes <richard@hughsie.com>
   Copyright 2012-2018, Matthias Klumpp <matthias@tenstral.net>
