--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/glib2.0/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/glib2.0/stable_copyright-detailed.expected.yml
@@ -1,5 +1,6 @@
 -
-- lgpl-2.0-plus AND mit AND gpl-2.0-plus AND apache-2.0 AND gpl-3.0-plus
+- lgpl-2.0-plus AND mit AND gpl-2.0-plus AND apache-2.0 AND apache-2.0 AND mit AND mit AND gpl-2.0-plus
+  AND gpl-3.0-plus
 - |
   Copyright (c) 1995-2018 Red Hat, Inc.
   Copyright (c) 2008-2010 Novell, Inc.
