--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libdb5.3/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libdb5.3/copyright-detailed.expected.yml
@@ -1,5 +1,5 @@
 -
-- sleepycat AND bsd-new
+- sleepycat AND sleepycat AND bsd-new AND bsd-new AND bsd-new
 - |
   Copyright (c) 1990, 2010 Oracle and/or its affiliates
   Copyright (c) 1990, 1993, 1994, 1995 The Regents of the University of California
