--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libpcre3/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libpcre3/copyright-detailed.expected.yml
@@ -1,5 +1,5 @@
 -
-- pcre AND bsd-new
+- pcre AND bsd-new AND bsd-new AND bsd-new
 - |
   Copyright (c) 1997-2007 University of Cambridge
   Copyright (c) 2007, Google Inc.
