--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtasn1-6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtasn1-6/copyright-detailed.expected.yml
@@ -1,6 +1,6 @@
 -
-- lgpl-2.1-plus AND gpl-3.0-plus AND lgpl-2.1 AND unknown-license-reference AND gfdl-1.1-plus
-  AND gfdl-1.3-plus AND gfdl-1.3
+- lgpl-2.1-plus AND gpl-3.0-plus AND lgpl-2.1-plus AND lgpl-2.1 AND gpl-3.0-plus AND unknown-license-reference
+  AND gfdl-1.1-plus AND gfdl-1.3-plus AND gfdl-1.3
 - |
   Copyright (c) 2000-2020 Free Software Foundation, Inc.
   Copyright (c) 2000-2020 Free Software Foundation, Inc.
