Add is_generic flag for other-copyleft licences
Signed-off-by: akugarg <akanksha.garg2k@gmail.com>

--- a/src/licensedcode/data/rules/other-copyleft_10.yml
+++ b/src/licensedcode/data/rules/other-copyleft_10.yml
@@ -1,4 +1,5 @@
 license_expression: other-copyleft
 is_license_reference: yes
+is_generic: yes
 relevance: 100
 notes: this is a rare, copyleft-like license
