--- a/src/licensedcode/data/rules/other-copyleft_17.yml
+++ b/src/licensedcode/data/rules/other-copyleft_17.yml
@@ -1,5 +1,6 @@
 license_expression: other-copyleft
 is_license_notice: yes
+is_generic: yes
 relevance: 100
 referenced_filenames:
     - License.txt
