--- a/src/licensedcode/data/rules/other-copyleft_19.yml
+++ b/src/licensedcode/data/rules/other-copyleft_19.yml
@@ -1,4 +1,5 @@
 license_expression: other-copyleft
 is_license_notice: yes
+is_generic: yes
 relevance: 100
 notes: This is a rare BSD-looking MPL-like license originally seen at https://git.wark.io/lib/textutil-go
