--- a/src/licensedcode/data/rules/other-copyleft_2.yml
+++ b/src/licensedcode/data/rules/other-copyleft_2.yml
@@ -1,5 +1,6 @@
 license_expression: other-copyleft
 is_license_text: yes
+is_generic: yes
 minimum_coverage: 80
 notes: a rare license found in older OpenSSL with a choice of GPL
 ignorable_authors:
