--- a/src/licensedcode/data/rules/other-copyleft_5.yml
+++ b/src/licensedcode/data/rules/other-copyleft_5.yml
@@ -1,5 +1,6 @@
 license_expression: other-copyleft
 is_license_text: yes
+is_generic: yes
 notes: http://alps.comp-phys.org/static/software/ALPS/LICENSE.txt/
 ignorable_copyrights:
     - Copyright (c) 2003-2004 Ian McCulloch
