--- a/src/licensedcode/data/rules/other-copyleft_8.yml
+++ b/src/licensedcode/data/rules/other-copyleft_8.yml
@@ -1,5 +1,6 @@
 license_expression: other-copyleft
 is_license_text: yes
+is_generic: yes
 notes: this is a rare, copyleft-like license
 ignorable_copyrights:
     - Copyright (c) 1999-2001 Michael Stutz <stutz@dsl.org>
