--- a/src/licensedcode/data/rules/other-copyleft_9.yml
+++ b/src/licensedcode/data/rules/other-copyleft_9.yml
@@ -1,5 +1,6 @@
 license_expression: other-copyleft
 is_license_text: yes
+is_generic: yes
 notes: See older versions of https://github.com/BioTurboNick/Skryptonite/blob/master/LICENSE.md
     this is a copyleft license that requires to share changes back. The project now uses an
     LGPL-3.0 instead
