Add is_generic flag for warranty-disclaimer licenses
Signed-off-by: akugarg <akanksha.garg2k@gmail.com>

--- a/src/licensedcode/data/rules/warranty-disclaimer_8.yml
+++ b/src/licensedcode/data/rules/warranty-disclaimer_8.yml
@@ -1,4 +1,5 @@
 license_expression: warranty-disclaimer
+is_generic: yes
 is_license_notice: yes
 minimum_coverage: 80
 notes: found in AgentPP/AngentPro an SNMP commercial product
