--- a/src/licensedcode/data/rules/warranty-disclaimer_and_unknown-license-reference_1.yml
+++ b/src/licensedcode/data/rules/warranty-disclaimer_and_unknown-license-reference_1.yml
@@ -1,4 +1,5 @@
 license_expression: warranty-disclaimer AND unknown-license-reference
+is_generic: yes
 is_license_reference: yes
 relevance: 100
 referenced_filenames:
