--- a/src/licensedcode/data/rules/bsd-simplified_and_warranty-disclaimer_1.yml
+++ b/src/licensedcode/data/rules/bsd-simplified_and_warranty-disclaimer_1.yml
@@ -1,4 +1,5 @@
 license_expression: bsd-simplified AND warranty-disclaimer
+is_generic: yes
 is_license_reference: yes
 relevance: 100
 ignorable_urls:
