--- a/src/licensedcode/data/rules/warranty-disclaimer_30.yml
+++ b/src/licensedcode/data/rules/warranty-disclaimer_30.yml
@@ -1,4 +1,5 @@
 license_expression: warranty-disclaimer
+is_generic: yes
 is_license_text: yes
 relevance: 100
 notes: a bare Microsoft disclaimer with no explicit grant of license
