--- a/src/licensedcode/data/rules/warranty-disclaimer_55.yml
+++ b/src/licensedcode/data/rules/warranty-disclaimer_55.yml
@@ -1,3 +1,4 @@
 license_expression: warranty-disclaimer 
+is_generic: yes
 is_license_notice: yes
 notes: typically for GPL but this can vary and be various versions
